--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <button id='minus' > ➖ </button>
   <button id='plus' > ➕ </button>
   <button id='heart' > ❤️ </button>
-  <button id='pause' > pause </button>
+  <button id='pause' >pause</button>
 
   <ul class='likes'></ul>
 
@@ -32,14 +32,14 @@
     <h3>Leave a comment</h3>
 
     <form id="comment-form" action="">
-      <input type='text' name="comment" id="comment-input" cols="30" rows="10">
+      <input type='text' name="comment" id="comment_input" cols="30" rows="10">
       </br>
       <button id='submit'>submit</button>
     </form>
 
   </div>
 
-  <script src="js/index.min.js"></script>
+  <!-- <script src="js/index.min.js"></script> -->
   <script src="js/challenge.js"></script>
 </body>
 </html>
